# WindowCaptureMod

./: README.md  WindowCapture.cs  WindowCaptureModule.csproj
Capture/: CMakeLists.txt  EmuVRX Capture Core.code-workspace  RenderPlugin.cpp  build_all.bat  main.cpp
CaptureApp/: CMakeLists.txt  SpoutWGCSender.cpp
